# NoahGameFrame

./: CMakeLists.txt  NoahFrame.sln  occ_env.bat  open_project.bat
NFComm/NFCore/: NFDateTime.hpp
NFComm/NFHeaderFiles/: NFHeaderFiles.vcxproj
NFComm/NFKernelPlugin/: NFSceneModule.h
NFComm/NFMessageDefine/: NFDefine.cs  NFDefine.pb.cc  NFDefine.pb.h  NFDefine.proto  NFMsgShare.cs  NFMsgShare.pb.cc  NFMsgShare.pb.h  NFMsgShare.proto
NFComm/NFNetPlugin/: NFHttpServer.cpp  NFHttpServerModule.cpp  NFIHttpServer.h  NFNet.cpp  NFNetModule.cpp  NFNetModule.h
NFComm/NFPluginLoader/: CMakeLists.txt
NFComm/NFPluginModule/: NFIMasterNet_HttpServerModule.h  NFIModelNet_HttpServerModule.h  NFIModelNet_ServerModule.h  NFINetModule.h
NFExamples/NFServer/: NFServer.cpp  NFServer.h  NFServer.vcxproj
NFServer/: CMakeLists.txt
NFServer/ModelNet_HttpServerPlugin/: CMakeLists.txt  ModelNet_HttpServerModule.cpp  ModelNet_HttpServerModule.h  ModelNet_HttpServerPlugin.cpp  ModelNet_HttpServerPlugin.h  NFMasterNet_HttpServerPlugin.vcxproj  NFMasterNet_HttpServerPlugin.vcxproj.filters  zip.cpp  zip.h
NFServer/ModelNet_HttpServerPlugin/gzip/: compress.hpp  decompress.hpp
NFServer/ModelServerPlugin/: CMakeLists.txt  ModelServerModule.cpp  ModelServerModule.h  ModelServerPlugin.cpp  ModelServerPlugin.h  NFMasterServerPlugin.vcxproj  NFMasterServerPlugin.vcxproj.filters
NFServer/NFGameServerNet_ServerPlugin/: CMakeLists.txt  NFGameServerNet_ServerModule.cpp  NFGameServerNet_ServerModule.h  NFGameServerNet_ServerPlugin.h  NFGameServerNet_ServerPlugin.vcxproj  NFGameServerNet_ServerPlugin.vcxproj.filters  NlohmannJson.h  OCCLogger.cpp  OCCLogger.h  OCCProcessor.cpp  OCCProcessor.h  OCCUtil.cpp  OCCUtil.h
NFServer/NFGameServerPlugin/: CMakeLists.txt
NFServer/NFMasterNet_HttpServerPlugin/: NFMasterNet_HttpServerModule.h  NFMasterNet_HttpServerPlugin.vcxproj
NFServer/NFMasterServerPlugin/: NFMasterServerPlugin.vcxproj
NFTools/NFFileProcess/: NFFileProcess.vcxproj
Tutorial/Tutorial5/: HelloWorld5.cpp  HelloWorld5.h
_Out/: rund.bat
(+16 files in other folders)
